Bug/68 UI defect on the reset password page (#68)
* Change text to match the design

* Fix clicking on show/hide password submits the form (again)

* Fix a white line from scrollbar

* Change images to match the design

--- a/frontend/src/app/modules/auth/auth-page-layout/auth-page-layout.component.scss
+++ b/frontend/src/app/modules/auth/auth-page-layout/auth-page-layout.component.scss
@@ -31,9 +31,8 @@
   float: left;
   width: 50%;
   height: 100vh;
-  background-image: url('../../../../assets/images/iltun-huseynli-OH7GkUqiuZk-unsplash.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
 }
 
