--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -124,7 +124,7 @@ a:active { text-decoration: none; }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #FFFFFF;
+  background: transparent;
 }
 
 /* Handle */
